@@ -79,7 +79,7 @@ public final class ZMod {
 
     private static final int IGNORE = 0, NAMEMAP = 1, RECIPES = 2, FUEL = 3, SMELTING = 4, ITEMS = 5;
     private static final int MTAG1 = 0, MTAG2 = 1, MINFO = 2, MERR = 3, MDEBUG = 4, MTAGR = 5, MAXMSG = 6;
-    private static int block[] = new int[256];
+    private static int block[] = new int[4096];
     private static void initBlockLookupArray() {
         block[  0] = KNOWN | SPACE | BASIC | EMPTY; // air
         block[  1] = KNOWN | SOLID | BASIC;         // stone
@@ -2890,7 +2890,7 @@ public final class ZMod {
     private static int optCheatBlockHitDelay = 5;
 
     private static boolean initModCheat() {
-        cheatMobs = new Mark[MAXTYPE]; cheatOres = new Mark[256]; cheatMark = new Mark[cheatMax]; cheatDamage = new boolean[cheatItems];
+        cheatMobs = new Mark[MAXTYPE]; cheatOres = new Mark[4096]; cheatMark = new Mark[cheatMax]; cheatDamage = new boolean[cheatItems];
         cheatAmbItems = makeBuffer(new float[] {4f, 4f, 4f, 1f});
         cheatAmbGeom  = makeBuffer(new float[] {0f, 0f, 0f, 1f});
         log("info: loading config for \"cheat\"");
@@ -2904,9 +2904,12 @@ public final class ZMod {
             if (got.length == 2) {
                 Mark color = new Mark();
                 int id = names.containsKey(got[0]) ? (Integer)(names.get(got[0])) : parseUnsigned(got[0]);
-                if (id>0 && id<256 && color.loadColor(got[1])) { cheatOres[id] = color; continue; }
+                if (id>0 && id<cheatOres.length && color.loadColor(got[1])) {
+                    cheatOres[id] = color;
+                }
+            } else {
+                err("error: config.txt @ optCheatOres - invalid ore/color pair \""+val[i]+"\"");
             }
-            err("error: config.txt @ optCheatOres - invalid ore/color pair \""+val[i]+"\"");
         }
         val = getString("optCheatShowMobs", "1/0x000088, 3/0x880000, 5/0x888888, 6/0x008800, 7/0x888800, 8/0x880088, 12/0x008888, 11/0x000044, 2/0x444400, 4/0x444444, 9/0x440000, 10/0x004444, 14/0x004400, 15/0xffffff").split("[\\t ]*,[\\t ]*");
         for (int i=0;i<val.length;i++) {
@@ -3668,13 +3671,14 @@ public final class ZMod {
     //=ZMod=Dig===============================================================
     private static boolean modDigEnabled;
     private static boolean optDigHarvestAlways, optDigCheckReach, optDigSyncDigged;
-    private static float optDigSpeed, optDigReach;
+    private static boolean optDigReachSet, optDigReachSetDig, optDigReachSetUse;
+    private static float optDigSpeed, optDigReach, optDigReachDig, optDigReachUse;
     private static boolean featureCustomReachAvailable;
 
     private static boolean initModDig() {
         log("info: loading config for \"dig\"");
         optionsModDig();
-        featureCustomReachAvailable = checkClass(NetServerHandler.class, "dig", "custom reach not available");
+        featureCustomReachAvailable = checkClass(NetServerHandler.class) && checkClass(PlayerControllerMP.class);
         return checkClass(PlayerControllerMP.class, "dig");
     }
 
@@ -3682,11 +3686,19 @@ public final class ZMod {
         optDigCheckReach = getSetBool(optDigCheckReach, "optDigCheckReach", false, "Cancel out of reach actions");
         optDigSyncDigged = false; // broken as of 1.4.6, they removed the BlockDig Request-status (3)
         //optDigSyncDigged = getSetBool(optDigSyncDigged, "optDigSyncDigged", false, "Synchronize newly digged blocks");
-        optDigHarvestAlways = getSetBool(optDigHarvestAlways, "optDigHarvestAlways", false, "Always harvest, regardless of tool");
-        optDigReach = getSetFloat(optDigReach, "optDigReach", 4.5f, 2f, 128f, "Arm length");
-        optDigSpeed = getSetFloat(optDigSpeed, "optDigSpeed", 2.0f, 0.1f, 10.0f, "Digging speed multiplier");
+        optDigHarvestAlways = false;
+        //optDigHarvestAlways = getSetBool(optDigHarvestAlways, "optDigHarvestAlways", false, "Always harvest, regardless of tool");
+        optDigReachSet = getSetBool(optDigReachSet, "optDigReachSet", false, "Set arm reach globally");
+        optDigReach = getSetFloat(optDigReach, "optDigReach", 6f, 2f, 64f, "Global arm reach value");
+        optDigReachSetDig = getSetBool(optDigReachSetDig, "optDigReachSetDig", false, "Set arm reach for digging blocks");
+        optDigReachDig = getSetFloat(optDigReachDig, "optDigReachDig", 6f, 2f, 64f, "Dig arm reach value (default 6)");
+        optDigReachSetUse = getSetBool(optDigReachSetUse, "optDigReachSetUse", false, "Set arm reach for using or placing blocks");
+        optDigReachUse = getSetFloat(optDigReachUse, "optDigReachUse", 8f, 2f, 64f, "Use arm reach value (default 8)");
+        optDigSpeed = 1f;
+        //optDigSpeed = getSetFloat(optDigSpeed, "optDigSpeed", 2.0f, 0.1f, 10.0f, "Digging speed multiplier");
     }
 
+    /*
     public static float digReachHandle() {
         float res = 4f;
         if (!isMultiplayer) {
@@ -3710,11 +3722,15 @@ public final class ZMod {
         else if (ZMod.modDigEnabled) return progress * optDigSpeed;
         return progress;
     }
+    */
 
     public static float actualReachDig() {
         float reach = 6;
         if (modDigEnabled) {
-            if (!isMultiplayer && featureCustomReachAvailable) reach = optDigReach;
+            if (!isMultiplayer && featureCustomReachAvailable) {
+                if (optDigReachSet) reach = optDigReach;
+                if (optDigReachSetDig) reach = optDigReachDig;
+            }
         }
         return reach;
     }
@@ -3726,7 +3742,10 @@ public final class ZMod {
     public static float actualReachUse() {
         float reach = 8;
         if (modDigEnabled) {
-            if (!isMultiplayer && featureCustomReachAvailable) reach = optDigReach;
+            if (!isMultiplayer && featureCustomReachAvailable) {
+                if (optDigReachSet) reach = optDigReach;
+                if (optDigReachSetUse) reach = optDigReachUse;
+            }
         }
         return reach;
     }
@@ -3736,11 +3755,11 @@ public final class ZMod {
     }
 
     public static float actualPlayerReach() {
-        float reach = (player != null && player.capabilities.isCreativeMode) ? 5.0f : 4.5f;
+        float reach = 4.5f;
         if (modDigEnabled) {
-            if (!isMultiplayer && featureCustomReachAvailable) reach = optDigReach;
-            else reach = java.lang.Math.min(optDigReach, actualReachUse());
+            reach = java.lang.Math.min(actualReachDig()-1.5f, actualReachUse());
         }
+        if (player != null && player.capabilities.isCreativeMode) reach += 0.5;
         return reach;
     }
 
@@ -4815,9 +4834,16 @@ public final class ZMod {
     private static Object getResult(Method m, Object obj, Object p1, Object p2) { return getResult(m, obj, new Object[]{p1,p2}); }
     private static Object getResult(Method m, Object obj, Object p1, Object p2, Object p3) { return getResult(m, obj, new Object[]{p1,p2,p3}); }
     private static Object getResult(Method m, Object obj, Object p1, Object p2, Object p3, Object p4) { return getResult(m, obj, new Object[]{p1,p2,p3,p4}); }
+    private static boolean checkClass(Class c) {
+        try {
+            Field field = c.getDeclaredField("zmodmarker");
+            if (field != null) return true;
+        } catch(Exception whatever) { }
+        return false;
+    }
     private static boolean checkClass(Class c, String mod) { return checkClass(c, mod, null); }
     private static boolean checkClass(Class c, String mod, String warning) {
-        try { Field field = c.getDeclaredField("zmodmarker"); if (field != null) return true; } catch(Exception whatever) { }
+        if (checkClass(c)) return true;
         if (warning == null) err("error: "+c.getName()+".class has not been installed - "+mod+" mod disabled");
         else log("warning: "+c.getName()+".class has not been installed - "+mod+" mod: "+warning);
         return false;
