@@ -1,8 +1,11 @@
 Zombe's modpack changelog starting from MC 1.4.4
 
 v6.8.1 for MC 1.4.6
+- added config options for Dig
+- added missing recipes from 1.3.1 to 1.4.6
 - fixed the not working death mod (tested)
 - fixed a bug related to null chat lines
+- fixed a bug related to Cheat:ShowOres caused by block id over 255 (untested)
 
 v6.8.0 for MC 1.4.6
 - compatibility: updated for Minecraft 1.4.6
